# breez-sdk-spark-flutter

./: pubspec.yaml
android/: build.gradle
ios/: breez_sdk_spark_flutter.podspec
lib/src/rust/: errors.dart  errors.freezed.dart  events.dart  events.freezed.dart  frb_generated.dart  frb_generated.io.dart  logger.dart  models.dart  models.freezed.dart  sdk.dart  sdk_builder.dart
macos/: breez_sdk_spark_flutter.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs
