[package]
name = "breez_sdk_spark_flutter"
version = "0.1.3"
edition = "2024"

[workspace]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
async-trait = "0.1.88"
# Replaced with release commit during publishing
breez-sdk-common = { git = "https://github.com/breez/spark-sdk.git", rev = "88524c6caa0c9ff8520abc6ec2fbb4b797bdc226" }
breez-sdk-spark = { git = "https://github.com/breez/spark-sdk.git", rev = "88524c6caa0c9ff8520abc6ec2fbb4b797bdc226", features = ["openssl-vendored"] }
extend = "1.2.0"
flutter_rust_bridge = "=2.9.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
