[package]
name = "breez_sdk_spark_flutter"
version = "0.1.3"
edition = "2024"

[workspace]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
async-trait = "0.1.88"
# Replaced with release commit during publishing
breez-sdk-common = { git = "https://github.com/breez/spark-sdk.git", rev = "343446084061acca293e9030503de4b37bb11365" }
breez-sdk-spark = { git = "https://github.com/breez/spark-sdk.git", rev = "343446084061acca293e9030503de4b37bb11365", features = ["openssl-vendored"] }
extend = "1.2.0"
flutter_rust_bridge = "=2.9.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
